--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,28 @@
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Raleway', sans-serif;
 }
 
 .header-logo {
-    color: #2E2F42;
-        font-family: Raleway;
-        font-size: 18px;
+    
+        color: #4D5AE5;
+            font-family: Raleway;
+            font-size: 18px;
         
-        font-weight: 700;
-        line-height: 1.17px;
-        
-        letter-spacing: -0.03em;
-        text-transform: uppercase;
-        text-decoration: none;
+            font-weight: 700;
+            line-height: 1.17px;
+            letter-spacing: -0.03em;
+            text-transform: uppercase;
+            text-decoration: none;
 }
 
 .header-logo span {
-color: #4D5AE5;
+color: #2E2F42;
     font-family: Raleway;
     font-size: 18px;
-  
+
     font-weight: 700;
     line-height: 1.17px;
+
     letter-spacing: -0.03em;
     text-transform: uppercase;
     text-decoration: none;
