--- a/css/style.css
+++ b/css/style.css
@@ -1,65 +1,107 @@
 body {
-    font-family: 'Roboto', 'Raleway', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    color: #434455;
+    background-color: #FFFFFF;
 }
 
 .header-logo {
-        color: #2E2F42;
+    color: #4D5AE5;
         font-family: Raleway, sans-serif;
         font-size: 18px;
-    
         font-weight: 700;
-        line-height: 1.17px;
-    
-        letter-spacing: -0.03em;
+        line-height: 1.17;
+        letter-spacing: 0.03em;
         text-transform: uppercase;
-        text-decoration: none;
 }
 
-.header-menu-list {
+.header-logo-italic {
+
+
+    color: #2E2F42;
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+
+    font-weight: 700;
+    line-height: 1.17;
+
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.header-list {
     color:  #2E2F42;
         
         font-size: 16px;
         font-weight: 500;
-        line-height: 15px;
+        line-height: 1.5;
         letter-spacing: 0.02em;
         text-decoration: none;
 }
 
+.header-list:hover{
+    color: #404bbf;
+}
+
+.header-list:focus{
+color:#404bbf;
+}
 
 .header-contacts {
 color:  #434455;
 
     font-size: 16px;
-   
+font-style: normal;
     font-weight: 400;
-    line-height: 1.5px;
+    line-height: 1.5;
     
     letter-spacing: 0.02em;
     text-decoration: none;
 }
 
+.header-contacts:hover{
+color: #404bbf;
+}
+
+.header-contacts:focus{
+color: #404bbf;
+}
+
+/* SECTION1 */
 .business {
    background-color:  #2E2F42;
-width: 1440px;
-    height: 600px;
-    flex-shrink: 0;
 }
 
 .title-business {
 color:  #FFF;
-    text-align: center;
     font-size: 56px;
     font-weight: 700;
-    line-height: 60px;
+    line-height: 1.07;
+    text-align: center;
     letter-spacing: 0.02em;
 }
 
 .business-btn {
-    border-radius: 4px;
-        background-color: #4D5AE5;
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+        background-color: #4D5AE5; 
+        color: #ffffff;
+        font-family: "Roboto", sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        cursor: pointer;
 }
 
+.business-btn:hover{
+background-color: #404BBF;
+}
+
+.business-btn:focus{
+    background-color: #404BBF;
+}
+/* ----------- */
+
+/* SECTION2 */
 .visualy-hidden  {
      position: absolute;
      width: 1px;
@@ -77,7 +119,7 @@ color:  #FFF;
     color: #2E2F42;
         font-size: 20px;
         font-weight: 500;
-        line-height: 1.2px;
+        line-height: 1.2;
         letter-spacing: 0.02em;
  }
 
@@ -85,106 +127,66 @@ color:  #FFF;
     color: #434455;
         font-size: 16px;
         font-weight: 400;
-        line-height: 1.5px;
+        line-height: 1.5;
         letter-spacing: 0.02em;
  }
+/*---------------- */
 
- .punctuality-title {
-    color: #2E2F42;
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 1.2px;
-        letter-spacing: 0.02em;
- }
-
- .punctuality-text {
-    color: #434455;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 1.5px;
-        letter-spacing: 0.02em;
- }
-
- .diligence-title {
-    color: #2E2F42;
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 1.2px;
-        letter-spacing: 0.02em;
- }
-
- .diligence-text {
-    color: #434455;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 1.5px;
-        letter-spacing: 0.02em;
- }
-
- .technologies-title {
-    color: #2E2F42;
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 1.2px;
-        letter-spacing: 0.02em;
- }
-
- .technologies-text {
-    color: #434455;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 1.5px;
-        letter-spacing: 0.02em;
- }
+/* SECTION3 */
+ 
  .our-team {
     background-color: #F4F4FD;
  }
 
  .team-title {
     color:  #2E2F42;
-        text-align: center;
         font-size: 36px;
         font-weight: 700;
-        line-height: 1.11px;
+        line-height: 1.11;
         letter-spacing: 0.02em;
         text-transform: capitalize;
  }
 
  .team-img {
-background: url(<path-to-image>), lightgray -97.034px -0.927px / 181.897% 251.37% no-repeat;
+background-color:#FFFFFF;
  }
  .team-subtitle {
 color:  #2E2F42;
-    text-align: center;
     font-size: 20px;
     font-weight: 500;
-    line-height: 1.20px;
-   
+    line-height: 1.2;
     letter-spacing: 0.02em;
  }
 
  .team-subtitle-text {
     color:  #434455;
-        text-align: center;
         font-size: 16px;
         font-weight: 400;
-        line-height: 1.50px;
+        line-height: 1.5;
         letter-spacing: 0.02em;
  }
+/* -------------*/
+/* SECTION4 */
 
+
+
+
+
+
+
+
+/* ---------- */
+/* SECTION5 */
  .footer {
     background-color:  #2E2F42;
-    width: 1440px;
-        height: 312px;
-        flex-shrink: 0;
  }
 
  .footer-logo {
-    color:  #F4F4FD;
+    color: #4d5ae5;
         font-family: Raleway, sans-serif;
         font-size: 18px;
         font-weight: 700;
-        line-height: 1.17px;
+        line-height: 1.17;
        
         letter-spacing: 0.03em;
         text-transform: uppercase;
@@ -192,20 +194,25 @@ color:  #2E2F42;
  }
 
  .header-logo-italic{
-    color:#4D5AE5;
-        font-family: Raleway, sans-serif;
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 1.17px;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
+    
+
+        color: #F4F4FD;
+            font-family: Raleway, sans-serif;
+            font-size: 18px;
+        
+            font-weight: 700;
+            line-height: 1.17;
+        
+            letter-spacing: -0.03em;
+            text-transform: uppercase;
+            text-decoration: none;
  }
  .footer-text {
     color: #F4F4FD;
         font-size: 16px;
         font-weight: 400;
-        line-height: 1.50px;
+        line-height: 1.50;
        
         letter-spacing: 0.02em;
  }
- 
+ /* ----------- */
