--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,32 @@ color:  #2E2F42;
 /* -------------*/
 /* SECTION4 */
 
+.portfolio-title {
+    color:  #2E2F42;
+        text-align: center;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+}
 
+.portfolio-img {}
+
+.portfolio-subtitle {
+    color:  #2E2F42;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em}
+
+.portfolio-text {
+    color: #434455;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+}
 
 
 
