--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ color:  #2E2F42;
         text-decoration: none;
  }
 
- .header-logo-italic{
+ .header-logo-footer{
     
 
         color: #F4F4FD;
