--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ background-color: #404BBF;
         font-weight: 700;
         line-height: 1.11;
         letter-spacing: 0.02em;
+        text-align: center;
         text-transform: capitalize;
  }
 
@@ -172,7 +173,7 @@ color:  #2E2F42;
         text-align: center;
         font-size: 36px;
         font-weight: 700;
-        line-height: 1.11;
+        line-height: 1.2;
         letter-spacing: 0.02em;
         text-transform: capitalize;
 }
