--- a/css/style.css
+++ b/css/style.css
@@ -102,12 +102,9 @@ background-color: #404BBF;
 
 /* SECTION2 */
 .visualy-hidden  {
-     position: absolute;
-     width: 1px;
-     height: 1px;
+    
      margin: -1px;
      border: 0;
-     padding: 0;
      white-space: nowrap;
      clip-path: inset(100%);
      clip: rect (0 0 0 0);
@@ -146,7 +143,9 @@ background-color: #404BBF;
         text-align: center;
         text-transform: capitalize;
  }
-
+.team-list {
+    background-color: #FFFFFF
+}
  .team-img {
 background-color:#FFFFFF;
  }
