--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ body {
         font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.02em;
+        list-style-type: none;
 }
 
 .header-list:hover{
