--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,11 @@ color: #4D5AE5;
 .link {
     text-decoration: none;
 }
+
+.no-bullets{
+    list-style-type: none;
+}
+
 .header-list {
     color:  #2E2F42;
         
@@ -37,7 +42,6 @@ color: #4D5AE5;
         font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.02em;
-        list-style-type: none;
 }
 
 .header-list:hover{
@@ -61,7 +65,6 @@ font-style: normal;
     line-height: 1.5;
     
     letter-spacing: 0.02em;
-    list-style-type: none;
 }
 
 .header-contacts:hover{
@@ -123,7 +126,6 @@ background-color: #404BBF;
         font-weight: 500;
         line-height: 1.2;
         letter-spacing: 0.02em;
-        list-style-type: none;
  }
 
  .strategy-text {
@@ -152,11 +154,9 @@ background-color: #404BBF;
  }
 .team-list {
     background-color: #FFFFFF
-    list-style-type: none;
 }
  .team-img {
 background-color:#FFFFFF;
-
  }
  .team-subtitle {
 color:  #2E2F42;
@@ -224,13 +224,13 @@ color:  #2E2F42;
 
  .logo-footer{
         color: #4d5ae5;
-            font-family: Raleway, sans-serif;
-            font-size: 18px;
-            font-weight: 700;
-            line-height: 1.17;
-        
-            letter-spacing: 0.03em;
-            text-transform: uppercase;
+        font-family: Raleway, sans-serif;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 1.17;
+       
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
             
  }
  .footer-text {
