--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,17 @@ body {
 }
 
 .header-logo {
+    color: #4D5AE5;
+        font-family: Raleway, sans-serif;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 1.17;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;}
+
+.header-logo-italic {
+    
+
     color: #2E2F42;
         font-family: Raleway, sans-serif;
         font-size: 18px;
@@ -14,17 +25,7 @@ body {
     
         letter-spacing: 0.03em;
         text-transform: uppercase;
-}
-
-.header-logo-italic {
     
-color: #4D5AE5;
-    font-family: Raleway, sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
 }
 
 .link {
